fix: mvn module plugin name

--- a/flink-connectors/flink-connector-jdbc-yw/pom.xml
+++ b/flink-connectors/flink-connector-jdbc-yw/pom.xml
@@ -31,7 +31,7 @@ under the License.
 	</parent>
 
 	<artifactId>flink-connector-jdbc-yw_${scala.binary.version}</artifactId>
-	<name>Flink : Connectors : JDBC</name>
+	<name>Flink : Connectors : JDBC-YW</name>
 
 	<packaging>jar</packaging>
 
